[package]
name = "ptrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.126"
nix = "0.24.1"
clap = { version = "3.2.5", features = ["derive"] }

[build]
target = "x86_64-unknown-linux-gnu"